[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renac-ble"
version = "0.1.0"
description = "BLE toolkit for RENAC inverters and wallbox"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Helder Moreira", email = "helder.moreira@voluzi.com" }]
dependencies = ["bleak>=0.22"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
renac_ble = ["py.typed"]
